Make f32a instruction size more realistic.

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -8,6 +8,8 @@ Inspired by [F18a](https://www.greenarraychips.com/home/documents/greg/DB001-221
 
 ## Instructions
 
+Instruction size: 1 byte for opcode, 4 bytes for each arguments.
+
 ### Data Movement Instructions
 
 - **Literal**
