--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -6,9 +6,29 @@ Comments in F32a assembly code are denoted by the `\` character.
 
 Inspired by [F18a](https://www.greenarraychips.com/home/documents/greg/DB001-221113-F18a.pdf)
 
+## ISA Specific State Views
+
+- `A:dec`, `A:hex` -- `A` register.
+- `B:dec`, `B:hex` -- `B` register.
+- `T:dec`, `T:hex` -- Top of the data stack.
+- `S:dec`, `S:hex` -- Second value on the data stack.
+- `R:dec`, `R:hex` -- Top of the return stack.
+- `stack:dec`, `stack:hex` -- Entire data stack.
+- `rstack:dec`, `rstack:hex` -- Entire return stack.
+- `EAM` -- Extended Arithmetic Mode (1 if enabled, 0 if disabled).
+- `C` -- Carry Flag (1 if set, 0 if cleared).
+
 ## Instructions
 
-Instruction size: 1 byte for opcode, 4 bytes for each arguments.
+Instruction size: 1 byte for opcode, 4 bytes for each argument.
+
+### Extended Arithmetic Mode (EAM)
+
+Extended Arithmetic Mode (EAM) is a mode that allows us to add with carry bit. See details in `add` instruction.
+
+### Carry Flag
+
+Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 ### Data Movement Instructions
 
@@ -77,7 +97,8 @@ Instruction size: 1 byte for opcode, 4 bytes for each arguments.
 - **Add**
     - **Syntax:** `+`
     - **Description:** Add the top two values on the data stack.
-    - **Operation:** `dataStack.push(dataStack.pop() + dataStack.pop())`
+    - **Operation (no EAM):** `dataStack.push(dataStack.pop() + dataStack.pop()), set carry flag`
+    - **Operation (EAM):** `dataStack.push(dataStack.pop() + dataStack.pop() + carry), set carry flag`
 
 - **Multiply Step**
     - **Syntax:** `+*`
@@ -126,7 +147,7 @@ Instruction size: 1 byte for opcode, 4 bytes for each arguments.
 - **Dup**
     - **Syntax:** `dup`
     - **Description:** Duplicate the top value of the data stack.
-    - **Operation:** `dataStack.push(dataStack.top())`
+    - **Operation:** `dataStack.push(dataStack.top()), carry flag does not change`
 
 - **Over**
     - **Syntax:** `over`
@@ -180,13 +201,3 @@ Instruction size: 1 byte for opcode, 4 bytes for each arguments.
     - **Syntax:** `>r`
     - **Description:** Move the top value of the data stack to the return stack.
     - **Operation:** `returnStack.push(dataStack.pop())`
-
-## ISA Specific State Views
-
-- `A:dec`, `A:hex` -- `A` register.
-- `B:dec`, `B:hex` -- `B` register.
-- `T:dec`, `T:hex` -- Top of the data stack.
-- `S:dec`, `S:hex` -- Second value on the data stack.
-- `R:dec`, `R:hex` -- Top of the return stack.
-- `stack:dec`, `stack:hex` -- Entire data stack.
-- `rstack:dec`, `rstack:hex` -- Entire return stack.
