Add docs for f32a eam command.x

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -125,6 +125,11 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
     - **Description:** Invert all bits of the top value on the data stack.
     - **Operation:** `dataStack.push(~dataStack.pop())`
 
+- **Extend Arithmetic Instructions**
+    - **Syntax:** `eam`
+    - **Description:** Pop value from the data stack and set EAM flag.
+    - **Operation:** `eam <- dataStack.pop()`
+
 ### Bitwise Instructions
 
 - **And**
