Fixed f32a 'over' description

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -156,8 +156,8 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 - **Over**
     - **Syntax:** `over`
-    - **Description:** Copy the second value from the top of the data stack to the top.
-    - **Operation:** `dataStack.push(dataStack[1])`
+    - **Description:** Swap the top two values of the data stack.
+    - **Operation:** `T <- dataStack.pop(); S <- dataStack.pop(); dataStack.push(T); dataStack.push(S)`
 
 ### Control Flow Instructions
 
