Fixed f32a 'multiply step' description

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -103,7 +103,7 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 - **Multiply Step**
     - **Syntax:** `+*`
     - **Description:** Perform a multiplication step.
-    - **Operation:** `T <- T + (if A[0] then S else 0); A <- A >> 1; T <- T >> 1; if T[0] then A[31] <- 1 else A[31] <- 0`
+    - **Operation:** `T <- T + (if A[0] then S else 0); A <- A >> 1; if T[0] then A[31] <- 1 else A[31] <- 0; T <- T >> 1`
 
 - **Divide Step**
     - **Syntax:** `+/`
