Fixed f32a 'minus if' description

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -188,8 +188,8 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 - **Minus If**
     - **Syntax:** `-if <label>`
-    - **Description:** Jump to the specified label if the top value of the data stack is negative.
-    - **Operation:** `if dataStack.pop() < 0 then p <- <label>`
+    - **Description:** Jump to the specified label if the top value of the data stack is nonnegative.
+    - **Operation:** `if dataStack.pop() >= 0 then p <- <label>`
 
 - **Halt**
     - **Syntax:** `halt`
