--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -197,12 +197,12 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 ### Register Manipulation Instructions
 
-- **R-Pop**
+- **RIntoT**
     - **Syntax:** `r>`
     - **Description:** Move the top value of the return stack to the data stack.
     - **Operation:** `dataStack.push(returnStack.pop())`
 
-- **R-Push**
+- **TIntoR**
     - **Syntax:** `>r`
     - **Description:** Move the top value of the data stack to the return stack.
     - **Operation:** `returnStack.push(dataStack.pop())`
