add details for f32a divide step

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -108,7 +108,7 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 - **Divide Step**
     - **Syntax:** `+/`
     - **Description:** Perform a division step.
-    - **Operation:** `remainder <- remainder << 1; if dividend[31] then remainder[0] <- 1; dividend <- dividend << 1; if remainder >= divisor then remainder <- remainder - divisor; quotient <- quotient << 1; if remainder >= divisor then quotient[0] <- 1`
+    - **Operation:** `remainder <- remainder << 1; if dividend[31] then remainder[0] <- 1; dividend <- dividend << 1; if remainder >= divisor then remainder <- remainder - divisor; quotient <- quotient << 1; if remainder >= divisor then quotient[0] <- 1`, где `A <- dividend; [B] <- divisor; T -> quotient; S -> remainder`
 
 - **Left Shift**
     - **Syntax:** `2*`
