[m68k] Refactoring immediate values in docs

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -38,7 +38,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
 
       ```assembly
       move.l D0, D1       ; Copy D0 to D1
-      move.l #42, D0      ; Load immediate value 42 into D0
+      move.l 42, D0       ; Load immediate value 42 into D0
       move.l (A0), D0     ; Load value from memory address in A0 into D0
       move.l D0, (A1)     ; Store value from D0 into memory address in A1
       ```
@@ -50,7 +50,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      movea.l #1000, A0   ; Load immediate value 1000 into A0
+      movea.l 1000, A0    ; Load immediate value 1000 into A0
       movea.l D0, A1      ; Copy D0 to A1
       ```
 
@@ -106,7 +106,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
 
       ```assembly
       add.l D0, D1        ; D1 <- D1 + D0
-      add.l #10, D0       ; D0 <- D0 + 10
+      add.l 10, D0        ; D0 <- D0 + 10
       ```
 
 - **Subtract**
@@ -117,7 +117,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
 
       ```assembly
       sub.l D0, D1        ; D1 <- D1 - D0
-      sub.l #1, D0        ; D0 <- D0 - 1
+      sub.l 1, D0         ; D0 <- D0 - 1
       ```
 
 - **Multiply**
@@ -149,7 +149,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      asl.l #2, D0        ; D0 <- D0 << 2
+      asl.l 2, D0         ; D0 <- D0 << 2
       asl.l D1, D0        ; D0 <- D0 << D1
       ```
 
@@ -160,7 +160,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      asr.l #2, D0        ; D0 <- D0 >> 2
+      asr.l 2, D0         ; D0 <- D0 >> 2
       asr.l D1, D0        ; D0 <- D0 >> D1
       ```
 
@@ -171,7 +171,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      lsl.l #2, D0        ; D0 <- D0 << 2
+      lsl.l 2, D0         ; D0 <- D0 << 2
       lsl.l D1, D0        ; D0 <- D0 << D1
       ```
 
@@ -182,7 +182,7 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      lsr.l #2, D0        ; D0 <- D0 >> 2
+      lsr.l 2, D0         ; D0 <- D0 >> 2
       lsr.l D1, D0        ; D0 <- D0 >> D1
       ```
 
