--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -28,19 +28,67 @@ Comments in M68k assembly code are denoted by the `;` character.
 
 Instruction size: 4 bytes (simplified assumption for this implementation).
 
+### Operation Modes
+
+M68k instructions can operate on data of different sizes:
+
+- **Byte (`.b`):** 8-bit operations
+- **Long (`.l`):** 32-bit operations (default)
+
+Example: `add.b D0, D1` operates on the least significant byte of D0 and D1.
+
+### Addressing Modes
+
+The M68k ISA supports the following addressing modes:
+
+1. **Register Direct**
+   - **Data Register Direct**: `D0` through `D7`
+   - **Address Register Direct**: `A0` through `A7`
+
+2. **Immediate**: `value`
+   - Example: `move.l 42, D0`
+
+3. **Memory Addressing**
+   - **Address Register Indirect**: `(An)`
+     - Accesses memory at the address contained in An
+     - Example: `move.l (A0), D0`
+
+   - **Address Register Indirect with Postincrement**: `(An)+`
+     - Uses the address in An, then increments An by the size of operation (1 for byte, 4 for long)
+     - Example: `move.l (A0)+, D0`
+
+   - **Address Register Indirect with Predecrement**: `-(An)`
+     - Decrements An by the size of operation, then uses the resulting address
+     - Example: `move.l -(A0), D0`
+
+   - **Address Register Indirect with Displacement**: `d(An)`
+     - Uses the address in An plus a signed 16-bit displacement d
+     - Example: `move.l 8(A0), D0` or `move.l -4(A0), D0`
+
+   - **Address Register Indirect with Index**: `d(An,Xn)`
+     - Uses the address in An plus the value in Xn (which can be a data or address register) plus a signed displacement d
+     - Example: `move.l 4(A0,D1), D0` or `move.l 8(A0,A1), D0`
+
 ### Data Movement Instructions
 
 - **Move**
-    - **Syntax:** `move.l <source>, <destination>`
+    - **Syntax:** `move.<size> <source>, <destination>`
     - **Description:** Move data from the source to the destination.
     - **Operation:** `<destination> <- <source>`
     - **Examples:**
 
       ```assembly
-      move.l D0, D1       ; Copy D0 to D1
-      move.l #42, D0      ; Load immediate value 42 into D0
+      move.l D0, D1       ; Copy D0 to D1 (32-bit)
+      move.b D0, D1       ; Copy lowest byte from D0 to lowest byte of D1
+      move.l 42, D0       ; Load immediate value 42 into D0
       move.l (A0), D0     ; Load value from memory address in A0 into D0
       move.l D0, (A1)     ; Store value from D0 into memory address in A1
+      move.l (A0)+, D0    ; Load value from A0, then increment A0 by 4
+      move.l -(A0), D0    ; Decrement A0 by 4, then load value from A0
+      move.l 8(A0), D0    ; Load value from A0+8
+      move.l -4(A0), D0   ; Load value from A0-4
+      move.l 8(A0,D1), D0 ; Load value from A0+D1+8
+      move.l 4(A0,A1), D0 ; Load value from A0+A1+4
       ```
 
 - **Move to Address Register**
@@ -50,139 +98,153 @@ Instruction size: 4 bytes (simplified assumption for this implementation).
     - **Examples:**
 
       ```assembly
-      movea.l #1000, A0   ; Load immediate value 1000 into A0
+      movea.l 1000, A0    ; Load immediate value 1000 into A0
       movea.l D0, A1      ; Copy D0 to A1
       ```
 
 ### Logical Instructions
 
 - **Not**
-    - **Syntax:** `not.l <destination>`
+    - **Syntax:** `not.<size> <destination>`
     - **Description:** Bitwise NOT the destination.
     - **Operation:** `<destination> <- ~<destination>`
     - **Examples:**
 
       ```assembly
-      not.l D0            ; D0 <- ~D0
+      not.l D0            ; D0 <- ~D0 (32-bit)
+      not.b D0            ; Apply NOT to lowest byte of D0
       ```
 
 - **And**
-    - **Syntax:** `and.l <source>, <destination>`
+    - **Syntax:** `and.<size> <source>, <destination>`
     - **Description:** Bitwise AND the source with the destination.
     - **Operation:** `<destination> <- <destination> & <source>`
     - **Examples:**
 
       ```assembly
-      and.l D0, D1        ; D1 <- D1 & D0
+      and.l D0, D1        ; D1 <- D1 & D0 (32-bit)
+      and.b D0, D1        ; AND lowest bytes of D0 and D1
       ```
 
 - **Or**
-    - **Syntax:** `or.l <source>, <destination>`
+    - **Syntax:** `or.<size> <source>, <destination>`
     - **Description:** Bitwise OR the source with the destination.
     - **Operation:** `<destination> <- <destination> | <source>`
     - **Examples:**
 
       ```assembly
-      or.l D0, D1         ; D1 <- D1 | D0
+      or.l D0, D1         ; D1 <- D1 | D0 (32-bit)
+      or.b D0, D1         ; OR lowest bytes of D0 and D1
       ```
 
 - **Exclusive Or**
-    - **Syntax:** `xor.l <source>, <destination>`
+    - **Syntax:** `xor.<size> <source>, <destination>`
     - **Description:** Bitwise XOR the source with the destination.
     - **Operation:** `<destination> <- <destination> ^ <source>`
     - **Examples:**
 
       ```assembly
-      xor.l D0, D1        ; D1 <- D1 ^ D0
+      xor.l D0, D1        ; D1 <- D1 ^ D0 (32-bit)
+      xor.b D0, D1        ; XOR lowest bytes of D0 and D1
       ```
 
 ### Arithmetic Instructions
 
 - **Add**
-    - **Syntax:** `add.l <source>, <destination>`
+    - **Syntax:** `add.<size> <source>, <destination>`
     - **Description:** Add the source to the destination.
     - **Operation:** `<destination> <- <destination> + <source>`
     - **Examples:**
 
       ```assembly
-      add.l D0, D1        ; D1 <- D1 + D0
-      add.l #10, D0       ; D0 <- D0 + 10
+      add.l D0, D1        ; D1 <- D1 + D0 (32-bit)
+      add.b D0, D1        ; Add lowest bytes of D0 and D1
+      add.l 10, D0        ; D0 <- D0 + 10
+      add.b 5, D0         ; Add 5 to lowest byte of D0
       ```
 
 - **Subtract**
-    - **Syntax:** `sub.l <source>, <destination>`
+    - **Syntax:** `sub.<size> <source>, <destination>`
     - **Description:** Subtract the source from the destination.
     - **Operation:** `<destination> <- <destination> - <source>`
     - **Examples:**
 
       ```assembly
-      sub.l D0, D1        ; D1 <- D1 - D0
-      sub.l #1, D0        ; D0 <- D0 - 1
+      sub.l D0, D1        ; D1 <- D1 - D0 (32-bit)
+      sub.b D0, D1        ; Subtract lowest bytes of D0 from D1
+      sub.l 1, D0         ; D0 <- D0 - 1
+      sub.b 1, D0         ; Subtract 1 from lowest byte of D0
       ```
 
 - **Multiply**
-    - **Syntax:** `mul.l <source>, <destination>`
+    - **Syntax:** `mul.<size> <source>, <destination>`
     - **Description:** Multiply the destination by the source.
     - **Operation:** `<destination> <- <destination> * <source>`
     - **Examples:**
 
       ```assembly
-      mul.l D0, D1        ; D1 <- D1 * D0
+      mul.l D0, D1        ; D1 <- D1 * D0 (32-bit)
+      mul.b D0, D1        ; Multiply lowest bytes of D0 and D1
       ```
 
 - **Divide**
-    - **Syntax:** `div.l <source>, <destination>`
+    - **Syntax:** `div.<size> <source>, <destination>`
     - **Description:** Divide the destination by the source.
     - **Operation:** `<destination> <- <destination> / <source>`
     - **Examples:**
 
       ```assembly
-      div.l D0, D1        ; D1 <- D1 / D0
+      div.l D0, D1        ; D1 <- D1 / D0 (32-bit)
+      div.b D0, D1        ; Divide using lowest bytes of registers
       ```
 
 ### Shift and Rotate Instructions
 
 - **Arithmetic Shift Left**
-    - **Syntax:** `asl.l <source>, <destination>`
+    - **Syntax:** `asl.<size> <source>, <destination>`
     - **Description:** Shift the destination left arithmetically by the count specified in the source.
     - **Operation:** `<destination> <- <destination> << <source>`
     - **Examples:**
 
       ```assembly
-      asl.l #2, D0        ; D0 <- D0 << 2
+      asl.l 2, D0         ; D0 <- D0 << 2 (32-bit)
+      asl.b 2, D0         ; Shift lowest byte of D0 left by 2 bits
       asl.l D1, D0        ; D0 <- D0 << D1
       ```
 
 - **Arithmetic Shift Right**
-    - **Syntax:** `asr.l <source>, <destination>`
+    - **Syntax:** `asr.<size> <source>, <destination>`
     - **Description:** Shift the destination right arithmetically by the count specified in the source.
     - **Operation:** `<destination> <- <destination> >> <source>` (sign-preserving)
     - **Examples:**
 
       ```assembly
-      asr.l #2, D0        ; D0 <- D0 >> 2
+      asr.l 2, D0         ; D0 <- D0 >> 2 (32-bit)
+      asr.b 2, D0         ; Shift lowest byte of D0 right by 2 bits
       asr.l D1, D0        ; D0 <- D0 >> D1
       ```
 
 - **Logical Shift Left**
-    - **Syntax:** `lsl.l <source>, <destination>`
+    - **Syntax:** `lsl.<size> <source>, <destination>`
     - **Description:** Shift the destination left logically by the count specified in the source.
     - **Operation:** `<destination> <- <destination> << <source>`
     - **Examples:**
 
       ```assembly
-      lsl.l #2, D0        ; D0 <- D0 << 2
+      lsl.l 2, D0         ; D0 <- D0 << 2 (32-bit)
+      lsl.b 2, D0         ; Shift lowest byte of D0 left by 2 bits
       lsl.l D1, D0        ; D0 <- D0 << D1
       ```
 
 - **Logical Shift Right**
-    - **Syntax:** `lsr.l <source>, <destination>`
+    - **Syntax:** `lsr.<size> <source>, <destination>`
     - **Description:** Shift the destination right logically by the count specified in the source.
     - **Operation:** `<destination> <- <destination> >> <source>` (zero-fill)
     - **Examples:**
 
       ```assembly
-      lsr.l #2, D0        ; D0 <- D0 >> 2
+      lsr.l 2, D0         ; D0 <- D0 >> 2 (32-bit)
+      lsr.b 2, D0         ; Shift lowest byte of D0 right by 2 bits
       lsr.l D1, D0        ; D0 <- D0 >> D1
       ```
 
