[m68k] Add notes on instruction size.

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -26,7 +26,7 @@ Comments in M68k assembly code are denoted by the `;` character.
 
 ## Instructions
 
-Instruction size: 4 bytes (simplified assumption for this implementation).
+Instruction sizes vary depending on the operation mode and addressing modes used. The ByteSize calculation now takes into account differences between byte and long operations, with byte operations generally using less memory than long operations.
 
 ### Operation Modes
 
@@ -36,6 +36,8 @@ M68k instructions can operate on data of different sizes:
 - **Long (`.l`):** 32-bit operations (default)
 
 Example: `add.b D0, D1` operates on the least significant byte of D0 and D1.
+
+> **Note on ByteSize implementation:** The ByteSize implementation for instructions now differentiates between byte and long operations. Byte operations (`.b`) use 1 byte for data, while long operations (`.l`) use 4 bytes. All jump and branch instructions always use long (6-byte) encodings regardless of the displacement.
 
 ### Addressing Modes
 
