[m68k] Fix report for flags.

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -12,7 +12,7 @@ Comments in M68k assembly code are denoted by the `;` character.
 - `D<n>:dec`, `D<n>:hex` -- Data registers (D0-D7).
 - `A<n>:dec`, `A<n>:hex` -- Address registers (A0-A7).
 - `PC:dec`, `PC:hex` -- Program Counter.
-- `SR:bin` -- Status Register (flags: X, N, Z, V, C).
+- `SR:bin` -- Status Register (flags: N, Z, V, C).
 
 ### Memory and Register Usage
 
