[m68k] Add cmp instructions.

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -178,6 +178,20 @@ The M68k ISA supports the following addressing modes:
       sub.b 1, D0         ; Subtract 1 from lowest byte of D0
       ```
 
+- **Compare**
+    - **Syntax:** `cmp.<size> <source>, <destination>`
+    - **Description:** Compare the destination with the source by subtracting the source from the destination and setting the condition codes accordingly, without storing the result.
+    - **Operation:** `temp <- <destination> - <source>` (sets flags only)
+    - **Examples:**
+
+      ```assembly
+      cmp.l D0, D1        ; Compare D1 with D0 (32-bit)
+      cmp.b D0, D1        ; Compare lowest bytes of D1 and D0
+      cmp.l 10, D0        ; Compare D0 with immediate value 10
+      cmp.b 5, D0         ; Compare lowest byte of D0 with 5
+      cmp.l (A0), D0      ; Compare D0 with memory at address in A0
+      ```
+
 - **Multiply**
     - **Syntax:** `mul.<size> <source>, <destination>`
     - **Description:** Multiply the destination by the source.
