[m68k] Add jsr and rts instructions.

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -396,6 +396,26 @@ The M68k ISA supports the following addressing modes:
       bvs overflow        ; Jump to "overflow" if V flag is set
       ```
 
+- **Jump to Subroutine**
+    - **Syntax:** `jsr <label>`
+    - **Description:** Jump to a subroutine by saving the return address on the stack and jumping to the target address.
+    - **Operation:** Push PC to stack, then PC <- target address
+    - **Examples:**
+
+      ```assembly
+      jsr my_function    ; Call subroutine at my_function
+      ```
+
+- **Return from Subroutine**
+    - **Syntax:** `rts`
+    - **Description:** Return from a subroutine by popping the return address from the stack and jumping to it.
+    - **Operation:** Pop PC from stack
+    - **Examples:**
+
+      ```assembly
+      rts                ; Return from subroutine
+      ```
+
 - **Halt**
     - **Syntax:** `halt`
     - **Description:** Halt the machine.
