[m68k] Add link & unlk instructions

--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -416,6 +416,58 @@ The M68k ISA supports the following addressing modes:
       rts                ; Return from subroutine
       ```
 
+- **Link**
+    - **Syntax:** `link <address_register>, <offset>`
+    - **Description:** Creates a stack frame for a subroutine by establishing a new frame pointer and allocating stack space for local variables. The `link` instruction is typically used at the beginning of a function to set up the environment for local variable storage.
+    - **Detailed Operation:**
+      1. Push the current value of the specified address register (typically A6, used as frame pointer) onto the stack
+      2. Copy the current stack pointer (A7) value into the specified address register, establishing a new frame pointer
+      3. Add the offset value to the stack pointer (A7) to reserve space for local variables
+         - The offset should be negative to allocate space (e.g., -4 allocates 4 bytes)
+         - Local variables can then be accessed using negative offsets from the frame pointer
+    - **Usage Context:**
+        - Commonly used with A6 as the conventional frame pointer register
+        - Local variables are accessed via frame pointer with negative offsets (e.g., `-4(A6)`)
+        - Parameters passed on the stack can be accessed via positive offsets (e.g., `8(A6)`)
+    - **Examples:**
+
+      ```assembly
+      link A6, -8        ; Save old A6 on stack, set A6 = SP, subtract 8 from SP to allocate space
+      move.l D0, -4(A6)  ; Store D0 in the first local variable (4 bytes from frame pointer)
+      move.l D1, -8(A6)  ; Store D1 in the second local variable (8 bytes from frame pointer)
+      ```
+
+- **Unlink**
+    - **Syntax:** `unlk <address_register>`
+    - **Description:** Deallocates a stack frame at the end of a subroutine, restoring both the stack pointer and frame pointer to their values before the corresponding `link` instruction was executed. The `unlk` instruction is typically the last operation before returning from a function.
+    - **Detailed Operation:**
+      1. Copy the frame pointer (specified address register, typically A6) to the stack pointer (A7)
+         - This effectively removes all local variables by restoring the stack pointer to its pre-allocation position
+      2. Pop the value from the top of stack into the specified address register
+         - This restores the previous frame pointer value that was saved by the `link` instruction
+    - **Usage Context:**
+        - Always paired with a corresponding `link` instruction
+        - Typically followed by an `rts` (return from subroutine) instruction
+        - Properly deallocates all local variables created in the function
+    - **Examples:**
+
+      ```assembly
+      unlk A6            ; Set SP = A6 (deallocating locals), then pop saved frame pointer into A6
+      rts                ; Return from subroutine
+      ```
+
+      Complete function example:
+
+      ```assembly
+      my_function:
+          link A6, -12         ; Create stack frame with 12 bytes for local variables
+          move.l 8(A6), D0     ; Access parameter passed on stack (at positive offset)
+          move.l D0, -4(A6)    ; Store in local variable (at negative offset)
+          ; ... function body ...
+          unlk A6              ; Destroy stack frame
+          rts                  ; Return from subroutine
+      ```
+
 - **Halt**
     - **Syntax:** `halt`
     - **Description:** Halt the machine.
