clarify Divide Step (+/) instruction

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -107,8 +107,19 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 - **Divide Step**
     - **Syntax:** `+/`
-    - **Description:** Perform a division step.
-    - **Operation:** `remainder <- remainder << 1; if dividend[31] then remainder[0] <- 1; dividend <- dividend << 1; if remainder >= divisor then remainder <- remainder - divisor; quotient <- quotient << 1; if remainder >= divisor then quotient[0] <- 1`
+    - **Description:** Perform one **restoring-division** micro-step.  
+        - Dividend --`A`  
+        - Divisor --`mem[B]`  
+        - Partial remainder --`S`  
+        - Partial quotient --`T`  
+    - **Operation:**  
+        1. `S <- S << 1`
+        2. `if A[31] then S[0] <- 1`
+        3. `A <- A << 1`
+        4. `if S >= mem[B] then S <- S - mem[B]`
+        5. `T <- T << 1`
+        6. `if S >= mem[B] then T[0] <- 1`
+    - [**Python example**](https://github.com/Chousik/wrench/blob/master/example/step-by-step-div.py)
 
 - **Left Shift**
     - **Syntax:** `2*`
