Update and restructured documentation.

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -2,6 +2,19 @@
 
 The F32a ISA is a stack-based instruction set designed for educational purposes. This documentation provides an overview of the instructions available in the F32a ISA, their syntax, and their semantics.
 
+## Architecture Overview
+
+The F32a architecture is a 32-bit stack-based architecture inspired by Forth systems. It features:
+
+- Two primary stacks: data stack and return stack
+- Two general-purpose registers: A and B
+- Stack-oriented operations that simplify many programming tasks
+- Extended Arithmetic Mode (EAM) for carry-dependent operations
+- Carry flag for arithmetic operations
+- Memory-mapped I/O
+
+This stack-based architecture offers a different programming paradigm compared to register-based architectures, making it excellent for understanding alternative computational models.
+
 Comments in F32a assembly code are denoted by the `\` character.
 
 Inspired by [F18a](https://www.greenarraychips.com/home/documents/greg/DB001-221113-F18a.pdf)
