--- a/docs/m68k.md
+++ b/docs/m68k.md
@@ -1,6 +1,19 @@
 # M68k Instruction Set Architecture (ISA) Documentation
 
-The M68k ISA is a register-based instruction set inspired by the Motorola 68000 architecture. This documentation provides an overview of the instructions available in the M68k ISA, their syntax, and their semantics.
+The M68k ISA is a simple CISC-like instruction set inspired by the Motorola 68000 architecture. This documentation provides an overview of the instructions available in the M68k ISA, their syntax, and their semantics.
+
+## Architecture Overview
+
+The M68k architecture is a 32-bit CISC (Complex Instruction Set Computer) architecture inspired by the Motorola 68000 series. It features:
+
+- 8 general-purpose data registers (D0-D7)
+- 8 address registers (A0-A7, with A7 serving as the stack pointer)
+- A variety of addressing modes for flexible memory access
+- Rich set of instructions with multiple operand sizes
+- Status register with condition code flags
+- Memory-mapped I/O
+
+This architecture provides a balance between the simplicity of RISC designs and the feature-rich nature of CISC processors, making it excellent for understanding more complex processor designs.
 
 Comments in M68k assembly code are denoted by the `;` character.
 
