Add description to right shift in acc32 and f32a

--- a/docs/f32a.md
+++ b/docs/f32a.md
@@ -141,7 +141,7 @@ Most of the instructions drop the carry flag. Exceptions: `add`, `dup`.
 
 - **Right Shift**
     - **Syntax:** `2/`
-    - **Description:** Shift the top value of the data stack right by one bit.
+    - **Description:** Shift the top value of the data stack right by one bit, preserving the sign (Arithmetic shift).
     - **Operation:** `dataStack.push(dataStack.pop() >> 1)`
 
 - **Invert**
